package mx.edev.design_principles.least_knowledge.case1.solution2;

public class Address {
  public void sendStatement() {
    System.out.println("send statement");
  }
}
